# janus-ai

./: .gitignore  MIGRATION_TO_HTTP_STREAMING.md  README.md  fl.plan.md
ai_core/: PROJECT_SUMMARY.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  simple_demo.py
ai_core/core/: __init__.py  audio_generator.py  persuasion_engine.py  prosody_tokenizer.py  response_generator.py  sentiment_analyzer.py  transcription.py
ai_core/fine_tuning/: 1_segment_audio.py  2_prepare_data.py  3_train_lora.py  4_setup_higgs.py  5_train_higgs_prosody.py  6_train_higgs_direct.py  7_train_higgs_custom.py  CLOUD_GPU_TRAINING.md  GPU_REQUIREMENTS.md  GPU_SETUP.md  HIGGS_REALITY.md  README.md  README_TRAINING.md  WHY_HIGGS_WONT_WORK.md  __init__.py  auto_segment_audio.py  jre_training_transcript.txt  prepare_dataset.py  prosody_annotated_training_set  requirements.txt  train_prosody.py
ai_core/fine_tuning/training_data/: dataset_info.json  prosody_dataset.json  segmentation_summary.txt
ai_core/guides/: 00_NAVIGATION.md  00_README_START.md  00_START_HERE.md  01_Quick_Start.md  02_Fine_Tuning_LoRA.md  03_Troubleshooting.md  04_Complete_Reference.md  05_Project_Status.md  06_Final_Summary.md  INSTALLATION_ERRORS_FIX.md  INSTALLATION_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SIMPLE_USAGE_GUIDE.md
ai_core/requirements/: requirements-core.txt  requirements-full.txt  requirements.txt
backend/: SETTINGS_API.md  pyproject.toml  run.py
backend/app/: __init__.py  amazfit_band_7_logger  check_chroma.py  config.py  garmin_logger  settings.py  test_pcm.py  transcription_service.py  vectorstore.py  ws.py
backend/app/routes/: health.py  ingest.py  query.py  sessions.py  settings.py  stream_sessions.py  voice.py  ws_sessions.py
backend/chroma_data/: chroma.sqlite3  chroma.sqlite3?mode=rwc
backend/data/: settings.json
backend/data/sessions/: index.json  sess_18eb1bfa.json  sess_1b11168a.json  sess_1b11168a_transcript.txt  sess_1b3248f0.json  sess_1e3d12a6.json  sess_2be0e3dd.json  sess_2be0e3dd_transcript.txt  sess_30a61460.json  sess_4137ebf0.json  sess_4151a09c.json  sess_4d01e9bb.json  sess_4d01e9bb_transcript.txt  sess_6172c82a.json  sess_6172c82a_transcript.txt  sess_7249803a.json  (+9 more)
(+2380 files in other folders)
