[project]
name = "ai-core"
version = "0.1.0"
description = "AI core functionality for Janus"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = [
  "__init__.py",
  "main.py",
  "core",
  "fine_tuning",
  "guides",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.force-include]
"." = "ai_core"
