[project]
name = "janus-backend"
version = "0.1.0"
description = "Minimal Flask + ChromaDB backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask",
  "flask-cors",
  "chromadb",
  "sentence-transformers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# cache-dir = ".uv-cache"
# python-preference = "only-managed"

[tool.hatch.build.targets.wheel]
packages = ["app"]

