[project]
name = "janus-backend"
version = "0.1.0"
description = "Minimal Flask + ChromaDB backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask",
  "flask-cors",
  "simpleaudio",
  "chromadb",
  "sentence-transformers",
  "pydub>=0.25.1",
  "audioop-lts",
  "sounddevice",
  "numpy",
  "huggingface_hub>=0.24.0",
  "openai>=1.52.0",
  "ai-core @ file:///Users/vs/Coding/janus-ai/ai_core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# cache-dir = ".uv-cache"
# python-preference = "only-managed"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

